feat: user; message 微服务

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - 5672:5672
       - 15672:15672
     environment:
-      RABBITMQ_DEFAULT_USER: Admin
+      RABBITMQ_DEFAULT_USER: admin
       RABBITMQ_DEFAULT_PASS: Qd20010701.
   mysql_compose:
     image: mysql:8.0.32
